public/css/blog.css
/* ... */
.job_hire_text_col>h2 {
    font-weight: 600;
    font-size: 40px;

}

@media (max-width: 767px) {
    .job_hire_text_col>h2 {
        font-size: 35px;

    }
}

@media (max-width: 479px) {
    .job_hire_text_col>h2 {
        font-size: 25px;
    }
}

.job_hire_text_col>p {
    font-size: 18px;
    margin-top: 35px;
    width: 600px;
    display: inline-block;
}

@media (max-width: 767px) {
    .job_hire_text_col>p {
        font-size: 17px;
        margin-top: 30px;
        width: 100%;
    }
}

@media (max-width: 479px) {
    .job_hire_text_col>p {
        font-size: 15px;
        margin-top: 20px;
    }
}

.will_join_col {
    width: 242px;
    height: 278px;
    background: #FBFBFB;
    border: 3px dashed #F4B41A;
    box-sizing: border-box;
    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.23);
    border-radius: 12px;
    padding-top: 40px;
}

@media (max-width: 1199px) {
    .will_join_col {
        width: 200px;
        height: 250px;
        padding-top: 21px;
    }

}

.members_number_svg,
.will_join_number_svg {
    padding-top: 20px;
    padding-bottom: 20px;
}

@media (max-width: 479px) {

    .members_number_svg,
    .will_join_number_svg {
        padding-top: 5px;
        padding-bottom: 5px;
    }

}


@media (max-width: 479px) {

    .will_join_icon_svg>svg,
    .members_icon_svg>svg {
        width: 60px;
        width: 60px;
    }

}

@media (max-width: 479px) {

    .will_join_number_svg>svg,
    .members_number_svg>svg {
        width: 40px;
        width: 40px;

    }

}

.members_col {
    padding-top: 280px;
}

.members_col>p,
.will_join_col>p {
    font-size: 24px;
}

@media (max-width: 767px) {

    .will_join_col>p,
    .members_col>p {
        font-size: 22px;
    }

}

@media (max-width: 479px) {

    .members_col>p,
    .will_join_col>p {
        font-size: 20px;
    }

}

@media (max-width: 991px) {
    .give_txt_row {
        text-align: center;
    }
}


.give_txt_row>h5 {
    font-size: 22px;
}

@media (max-width: 767px) {
    .give_txt_row>h5 {
        font-size: 20px;
    }
}

@media (max-width: 479px) {
    .give_txt_row>h5 {
        font-size: 18px;
    }
}


.give_txt_row>p {
    font-size: 18px;
    padding-top: 20px;
    padding-bottom: 20px;
}


@media (max-width: 479px) {
    .give_txt_row>p {
        font-size: 16px;
    }
}


.hire_row {
    padding-top: 70px;
}

@media (max-width: 767px) {
    .hire_row {
        padding-top: 50px;
    }

}

@media (max-width: 479px) {
    .hire_row {
        padding-top: 30px;
    }

}

@media (max-width: 991px) {
    .hire_icons_col {
        max-width: 400px;
        width: 100%;
        margin: 0 auto 30px;
    }

}

.offer_col {
    margin-left: 90px;
}

@media (max-width: 1439px) {
    .offer_col {
        margin-left: 80px;
    }
}

@media (max-width: 1200px) {
    .offer_col {
        margin-left: 30px;
    }
}

@media (max-width: 991px) {
    .offer_col {
        margin: 0 auto;
    }
}

.single_offer_txt_col>span {
    font-size: 18px;
}

@media (max-width: 479px) {
    .single_offer_txt_col>span {
        font-size: 16px;
    }
}


@media (max-width: 1439px) {
    [lang="en"] .single_offer_txt_col_1:nth-child(1)>span {
        width: 170px;
    }
}

@media (max-width: 1200px) {
    [lang="en"] .single_offer_txt_col_1:nth-child(1)>span {
        width: 100%;
    }
}

.single_offer_txt_col>img {
    margin-right: 15px;
    margin-bottom: 25px;

}

.single_offer_txt_col {
    margin-bottom: 20px;
    position: relative;
}

[lang="ru"] .single_offer_txt_col {
    width: 290px;
}

@media (max-width: 1200px) {
    [lang="ru"] .single_offer_txt_col {
        width: 100%;
    }
}

.single_offer_txt_col>img {
    position: absolute;
    top: 3px;
}

.single_offer_txt_col>span {
    margin-left: 40px;
    line-height: 160%;
}

.offer_container>h5 {
    font-size: 18px;
    font-weight: bold;
}


@media (max-width: 991px) {
    .offer_container>h5 {
        text-align: center;
        font-size: 16px;
    }
}

@media (max-width: 767px) {
    .give_txt_row>h5 {
        font-size: 20px;
    }
}

@media (max-width: 479px) {
    .give_txt_row>h5 {
        font-size: 18px;
    }
}

.offer_txt_row {
    padding-top: 20px;
}

.project {
	position: absolute;
	width: 405px;
	height: 100px;
	left: 757px;
	top: 208px;
	font-weight: 600;
	font-size: 54px;
}

.project-management {
	
}

.rectangle {
	width: 370px;
	height: 223px;
	background: #FFFFFF;
	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
	border-radius: 12px;
	background-image: url('images/rectangle.png');
	background-repeat: no-repeat; 
	background-size: auto;
}

.project-overview {
    width: 100%;
    height: auto;
    left: 960px;
    top: 503px;

    background: #FFFFFF;
    border: 3px dashed #F4B41A;
    box-sizing: border-box;
    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
    border-radius: 12px;
}

.project-overview-title {
    padding-top: 40px;
    padding-right: 40px;
    padding-bottom: 0px;
    padding-left: 40px;
    font-weight: 600;
    font-size: 40px;
    line-height: 130%;
    /* identical to box height, or 52px */
    display: flex;
    align-items: center;
    color: #143E59;
}

.project-overview-description {
    padding-top: 40px;
    padding-right: 40px;
    padding-bottom: 40px;
    padding-left: 40px;
    font-weight: normal;
    font-size: 18px;
    line-height: 160%;
    /* or 29px */

    color: #0D171D;
}

.img-entry {
    position: relative;
    top: 30px;
    left: 40px;
    width: 88%;
    height: 185px;
}

.custom-btn a {
	color: #FFFFFF;
    text-decoration: none;
    border-radius: 6px;
    border: 1px solid #143E5A;
    font-size: 18px;
    padding: 22px 70px;
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
    font-weight: 700;
    background: #143E59;
	border: 2px solid #143E59;
	box-sizing: border-box;
	border-radius: 6px;"
}

.custom-btn a:hover {
    background: #FFFFFF;
    color: #143E5A;
}

